--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "types": "./dist/index.d.ts",
     "require": "./dist/index.js"
   },
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "engines": {
+    "node": ">=12.19.0"
+  }
 }
